# buzzaar

./: .gitignore  .gitmodules  README.md  docker-compose.yml  package-lock.json
.github/workflows/: auto-assign.yml  backend-tests.yml  frontend-tests.yml  test-flow.yml
buzzaar-backend/: Dockerfile  requirements.txt
buzzaar-backend/buzzaar_core/: manage.py  pyproject.toml  pytest.ini  schema.yml
buzzaar-backend/buzzaar_core/buzzaar_core/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
buzzaar-backend/buzzaar_core/home/: urls.py
buzzaar-backend/buzzaar_core/messaging/: consumers.py  models.py  serializers.py  urls.py  views.py
buzzaar-backend/buzzaar_core/messaging/migrations/: 0001_initial.py
buzzaar-backend/buzzaar_core/product_categories/: models.py  serializers.py  views.py
buzzaar-backend/buzzaar_core/product_categories/migrations/: 0001_initial.py
buzzaar-backend/buzzaar_core/product_categories/tests/: tests.py
buzzaar-backend/buzzaar_core/products/: models.py  serializers.py  urls.py  views.py
buzzaar-backend/buzzaar_core/products/migrations/: 0001_initial.py  0002_product_condition.py  0003_product_category.py  0004_alter_product_description_productreport.py  0004_productpicture.py
buzzaar-backend/buzzaar_core/products/tests/: conftest.py  create_product_tests.py  factories.py
buzzaar-backend/buzzaar_core/templates/: hello.html
buzzaar-backend/buzzaar_core/templates/account/email/: email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_subject.txt
buzzaar-backend/buzzaar_core/user_likes/: apps.py  models.py  serializers.py  views.py
buzzaar-backend/buzzaar_core/user_likes/migrations/: 0001_initial.py
buzzaar-backend/buzzaar_core/users/: adapters.py  models.py  serializers.py  urls.py  views.py
buzzaar-backend/buzzaar_core/users/migrations/: 0001_initial.py  0002_address_remove_customuser_city_customuser_address.py  0003_alter_customuser_profile_picture.py
buzzaar-backend/buzzaar_core/users/tests/: conftest.py  factories.py  test_authentication.py
buzzaar-frontend/: Dockerfile  ackage.json
buzzaar-frontend/buzzaar-client/: README.md  angular.json  package-lock.json  package.json
buzzaar-frontend/buzzaar-client/src/: index.html
buzzaar-frontend/buzzaar-client/src/app/: app.component.spec.ts  app.component.ts
(+1 files in other folders)
